# bashprof

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: trace-format.md
examples/: README.md  ci-setup.sh
scripts/: smoke.sh
src/: cli.rs  collapse.rs  jsonout.rs  lib.rs  main.rs  profile.rs  ps4.rs  report.rs  runner.rs  trace.rs
tests/: cli.rs
